# greetings_demo

./: CITATION.md  LICENSE.md  README.md  pyproject.toml
src/greetings/: command.py  greeter.py
tests/: test_greeter.py
tests/fixtures/: samples.yaml
