[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Greetings"
version = "0.1.0"
readme = { file = "README.md", content-type = "text/markdown" }
license-files = { paths = ["LICENSE.md"] }
dependencies = [
    "art",
    "pyyaml",
]

[project.scripts]
greet = "greetings.command:process"

[project.optional-dependencies]
dev = ["pytest >= 6"]

[tool.hatch.build.targets.wheel]
packages = [
  "src/greetings",
]
